--- a/EMOS_Python.ipynb
+++ b/EMOS_Python.ipynb
@@ -1,8 +1,18 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/GaroGarabetian/emos/blob/main/EMOS_Python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "NJ08e1y7AADF"
       },
@@ -18,20 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 2,
       "metadata": {
+        "id": "1e7C65013ap_",
+        "outputId": "1d931d4a-d5fd-4dbb-8d0d-3eb93f83f926",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "1e7C65013ap_",
-        "outputId": "d87b2006-414c-4b06-c499-5d5db90de577"
+        }
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-86-e8753735c16d>:6: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+            "<ipython-input-2-e8753735c16d>:6: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
             "  unemployment_data = pd.read_csv(url, sep=r'[,\\t\\\\]')\n"
           ]
         },
@@ -119,13 +129,13 @@
         "print( unemployment_data.head())"
       ],
       "metadata": {
+        "id": "nxukDXQVFxpB",
+        "outputId": "f372591e-c41b-4dc7-b9c0-f2b29ac7ac10",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "nxukDXQVFxpB",
-        "outputId": "ff89a723-1b24-4801-e67d-ac7901b4f88e"
+        }
       },
-      "execution_count": 87,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,7 +179,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-87-8cde12e148b1>:10: FutureWarning: DataFrame.interpolate with object dtype is deprecated and will raise in a future version. Call obj.infer_objects(copy=False) before interpolating instead.\n",
+            "<ipython-input-3-9e108d24cffd>:10: FutureWarning: DataFrame.interpolate with object dtype is deprecated and will raise in a future version. Call obj.infer_objects(copy=False) before interpolating instead.\n",
             "  unemployment_data.interpolate(method='linear', inplace=True)\n"
           ]
         }
@@ -185,13 +195,13 @@
         "    print(f\"Rows with ':' in '{column}': {count_colon}\")\n"
       ],
       "metadata": {
+        "id": "EcHSy2_CLetO",
+        "outputId": "85f741a5-80c6-4080-ec9c-5f22d6b4ff2b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "EcHSy2_CLetO",
-        "outputId": "10ca84bc-1400-4504-dfca-7fe3a17c5463"
+        }
       },
-      "execution_count": 88,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "id": "eqepQPkW3aqA"
       },
@@ -245,13 +255,13 @@
         "print(unemployment_data.head())\n"
       ],
       "metadata": {
+        "id": "kVoj6_kKNm9R",
+        "outputId": "501ff2eb-55ff-45b3-e2a7-3ca697a1a6f1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "kVoj6_kKNm9R",
-        "outputId": "501ff2eb-55ff-45b3-e2a7-3ca697a1a6f1"
+        }
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,13 +299,13 @@
         "print(unemployment_data.dtypes)\n"
       ],
       "metadata": {
+        "id": "QqzqhAn9Oed3",
+        "outputId": "a79e049d-a1f9-4d81-c994-943a19ae274d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "QqzqhAn9Oed3",
-        "outputId": "a79e049d-a1f9-4d81-c994-943a19ae274d"
+        }
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,13 +347,13 @@
         "print( unemployment_data.head())"
       ],
       "metadata": {
+        "id": "mqTWZiKr8qtz",
+        "outputId": "4871a569-a44d-4bd4-8108-15634340d350",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "mqTWZiKr8qtz",
-        "outputId": "4871a569-a44d-4bd4-8108-15634340d350"
+        }
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -391,13 +401,12 @@
         "for col in numeric_columns:\n",
         "    unemployment_data[col] = unemployment_data[col].apply(\n",
         "        lambda x: np.nan if x < lower_bound[col] or x > upper_bound[col] else x\n",
-        "    )\n",
-        ""
+        "    )\n"
       ],
       "metadata": {
         "id": "JuLxtkXu-BJP"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -411,13 +420,13 @@
         "unemployment_data.columns"
       ],
       "metadata": {
+        "id": "YfC4XPtW-iN7",
+        "outputId": "ab2b7b71-f514-43a8-f5f3-04d00ab59de2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "YfC4XPtW-iN7",
-        "outputId": "ab2b7b71-f514-43a8-f5f3-04d00ab59de2"
+        }
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -455,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": null,
       "metadata": {
         "id": "ee7x7lyx3aqB"
       },
@@ -469,7 +478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": null,
       "metadata": {
         "id": "Mrcx13uu3aqC"
       },
@@ -481,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": null,
       "metadata": {
         "id": "95Bm-9hy3aqC"
       },
@@ -495,7 +504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": null,
       "metadata": {
         "id": "ViZ1KQ8d3aqD"
       },
@@ -509,7 +518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": null,
       "metadata": {
         "id": "eha4AiUb3aqD"
       },
@@ -521,14 +530,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": null,
       "metadata": {
+        "id": "CL8L-N4V3aqE",
+        "outputId": "08f0847b-e9ed-4bdd-d2d5-975a33501d78",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        },
-        "id": "CL8L-N4V3aqE",
-        "outputId": "08f0847b-e9ed-4bdd-d2d5-975a33501d78"
+        }
       },
       "outputs": [
         {
@@ -552,7 +561,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": null,
       "metadata": {
         "id": "DpuUCWoU3aqE"
       },
@@ -564,13 +573,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": null,
       "metadata": {
+        "id": "jEsmD9l73aqF",
+        "outputId": "71318ec8-fc2e-494a-9245-ba7170acaa70",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "jEsmD9l73aqF",
-        "outputId": "71318ec8-fc2e-494a-9245-ba7170acaa70"
+        }
       },
       "outputs": [
         {
@@ -625,7 +634,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
